--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,114 @@
-<section class="footer">
-  <div class="container">
-    <!-- enter your code here -->
+<!-- Footer by Taras Pererva -->
+
+<footer id="footer" class="footer">
+  <div class="footer-container">
+    <div class="footer-wrapper-one">
+      <a href="./index.html" class="footer-logo">watchcharm</a>
+
+      <ul class="footer-media-list">
+        <li class="footer-media-item">
+          <a
+            href="https://www.facebook.com/goITclub/"
+            target="_blank"
+            class="footer-media-link"
+          >
+            <svg class="footer-media-icon" width="18" height="18">
+              <use href="/img/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+
+        <li class="footer-media-item">
+          <a
+            href="https://www.instagram.com/goitclub/"
+            target="_blank"
+            class="footer-media-link"
+          >
+            <svg class="footer-media-icon" width="18" height="18">
+              <use href="/img/sprite.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+
+        <li class="footer-media-item">
+          <a
+            href="https://www.youtube.com/c/GoIT"
+            target="_blank"
+            class="footer-media-link"
+          >
+            <svg class="footer-media-icon" width="18" height="18">
+              <use href="/img/sprite.svg#icon-youtube"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+
+      <address class="footer-phone">
+        <a class="footer-phone-num" href="tel:+380684439426"
+          >+380 (68) 443-94-26</a
+        >
+      </address>
+
+      <h2 class="footer-description">
+        Have the time of your life with our watches: where high-class
+        craftsmanship meets impeccable design
+      </h2>
+    </div>
+
+    <div class="footer-wrapper-two">
+      <div class="footer-navigation">
+        <nav class="footer-nav">
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item">
+              <a href="#hero" class="footer-nav-link">Home</a>
+            </li>
+
+            <li class="footer-nav-item">
+              <a href="#about-us" class="footer-nav-link">About Us</a>
+            </li>
+
+            <li class="footer-nav-item">
+              <a href="#catalog" class="footer-nav-link">Catalog</a>
+            </li>
+
+            <li class="footer-nav-item">
+              <a href="#sale" class="footer-nav-link">Sale</a>
+            </li>
+
+            <li class="footer-nav-item">
+              <a href="#reviews" class="footer-nav-link">Reviews</a>
+            </li>
+
+            <li class="footer-nav-item">
+              <a href="#contact-us" class="footer-nav-link">Contact Us</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="footer-address">
+          1678 S. Pioneer Road Salt Lake City UT 84104
+        </address>
+      </div>
+
+      <div class="footer-copy">
+        <p class="copy-description">
+          &copy;2025 The Watch Spot. All rights reserved.
+        </p>
+
+        <ul class="copy-rules-list">
+          <li class="copy-rules-list">
+            <a class="copy-rules-link" href="copyrigth-rules-link"
+              >Terms of Service</a
+            >
+          </li>
+
+          <li class="copy-rules-list">
+            <a class="copy-rules-link" href="copyrigth-rules-link"
+              >Privacy Policy</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
-</section>
+</footer>
+<!-- /Footer by Taras Pererva -->
