--- a/src/css/_main.css
+++ b/src/css/_main.css
@@ -21,6 +21,8 @@
 
 /* @import url('./contact.css'); */
 
+@import url('./contact.css');
+
 /* @import url('./footer.css'); */
 
 /* @import url('./mobile-menu.css'); */
