--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -156,7 +156,7 @@
     border-radius: 4px;
     background-color: currentColor;
     opacity: 0;
-    color: #fff;
+    color: var(--accent);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
