--- a/src/css/_main.css
+++ b/src/css/_main.css
@@ -5,7 +5,7 @@
 
 /* Sections style */
 
-/* @import url('./header.css'); */
+@import url('./header.css');
 
 @import url('./hero.css');
 
@@ -23,4 +23,4 @@
 
 /* @import url('./footer.css'); */
 
-/* @import url('./mobile-menu.css'); */
+@import url('./mobile-menu.css');
