--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -1,5 +1,201 @@
 <section class="catalog">
   <div class="container">
-    <!-- enter your code here -->
+    <h2 class="catalog-title">Catalog</h2>
+
+    <div class="catalog-container">
+      <ul class="catalog-list">
+        <li class="catalog-item">
+          <picture>
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/catalog/catalogmob/cat-mob-min.png   1x,
+                ./img/catalog/catalogmob/cat-mob@2x-min.png 2x
+              "
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ../img/catalog/catalog.tab/cat-tab1-min.png   1x,
+                ./img/catalog/catalog.tab/cat-tab1@2x-min.png 2x
+              "
+            />
+            <source
+              media="(min-width: 1280px)"
+              srcset="
+                ../img/catalog/catalog.desk/cat1desk-min.png   1x,
+                ./img/catalog/catalog.desk/cat1desk@2x-min.png 2x
+              "
+            />
+
+            <img
+              src="../img/catalog/catalogmob/cat-mob-min.png"
+              alt="Garmin Fenix"
+              width="335"
+            />
+          </picture>
+          <h3 class="catalog-text">Garmin Fenix 7X Pro Sapphire Solar</h3>
+          <p class="catalog-price">€500</p>
+        </li>
+
+        <li class="catalog-item">
+          <picture>
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/catalog/catalogmob/cat-mob2-min.png   1x,
+                ./img/catalog/catalogmob/cat-mob2@2x-min.png 2x
+              "
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ../img/catalog/catalog.tab/cat-tab2-min.png   1x,
+                ./img/catalog/catalog.tab/cat-tab2@2x-min.png 2x
+              "
+            />
+            <source
+              media="(min-width: 1280px)"
+              srcset="
+                ../img/catalog/catalog.desk/cat2desk-min.png   1x,
+                ./img/catalog/catalog.desk/cat2desk@2x-min.png 2x
+              "
+            />
+
+            <img
+              src="../img/catalog/catalogmob/cat-mob2-min.png"
+              alt="Garmin Marq"
+              width="335"
+            />
+          </picture>
+
+          <h3 class="catalog-text">Garmin Marq Athlete</h3>
+          <p class="catalog-price">€450</p>
+        </li>
+        <li class="catalog-item">
+          <picture>
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/catalog/catalogmob/cat-mob3-min.png   1x,
+                ./img/catalog/catalogmob/cat-mob3@2x-min.png 2x
+              "
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ../img/catalog/catalog.tab/cat-tab3-min.png   1x,
+                ./img/catalog/catalog.tab/cat-tab3@2x-min.png 2x
+              "
+            />
+            <source
+              media="(min-width: 1280px)"
+              srcset="
+                ../img/catalog.desk/cat3desk-min.png   1x,
+                ./img/catalog.desk/cat3desk@2x-min.png 2x
+              "
+            />
+
+            <img
+              src="../img/catalogmob/cat-mob3-min.png"
+              alt="Garmin Descent"
+              width="335"
+            />
+          </picture>
+
+          <h3 class="catalog-text">Garmin Descent MK1</h3>
+          <p class="catalog-price">€680</p>
+        </li>
+        <li class="catalog-item">
+          <picture>
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/catalogmob/cat-mob4-min.png   1x,
+                ./img/catalogmob/cat-mob4@2x-min.png 2x
+              "
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ../img/catalog.tab/cat-tab4-min.png   1x,
+                ./img/catalog.tab/cat-tab4@2x-min.png 2x
+              "
+            />
+            <source
+              media="(min-width: 1280px)"
+              srcset="
+                ../img/catalog.desk/cat4desk-min.png   1x,
+                ./img/catalog.desk/cat4desk@2x-min.png 2x
+              "
+            />
+
+            <img
+              src="../img/catalogmob/cat-mob4-min.png"
+              alt="Garmin D2"
+              width="335"
+            />
+          </picture>
+
+          <h3 class="catalog-text">Garmin D2 Delta PX</h3>
+          <p class="catalog-price">€380</p>
+        </li>
+        <li class="catalog-item picture-item">
+          <picture>
+            <source
+              media="(min-width: 1280px)"
+              srcset="
+                ../img/catalog.desk/cat5desk-min.png   1x,
+                ./img/catalog.desk/cat5desk@2x-min.png 2x
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/catalog.tab/cat-tab5-min.png   1x,
+                ./img/catalog.tab/cat-tab5@2x-min.png 2x
+              "
+            />
+
+            <img
+              src="../img/catalog.tab/cat-tab5-min.png"
+              alt="Garmin Fenix"
+              width="335"
+            />
+          </picture>
+          <h3 class="catalog-text">Garmin Fenix 6 Pro Solar</h3>
+          <p class="catalog-price">€400</p>
+        </li>
+        <li class="catalog-item picture-item">
+          <picture>
+            <source
+              media="(min-width: 1280px)"
+              srcset="
+                ../img/catalog.desk/cat6desk-min.png   1x,
+                ./img/catalog.desk/cat6desk@2x-min.png 2x
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/catalog.tab/cat-tab6-min.png   1x,
+                ./img/catalog.tab/cat-tab6@2x-min.png 2x
+              "
+            />
+
+            <img
+              src="../img/catalog.tab/cat-tab6-min.png"
+              alt="Tube Watch"
+              width="335"
+            />
+          </picture>
+          <h3 class="catalog-text">
+            Tube Watch S42 Date Steel With Black Case
+          </h3>
+          <p class="catalog-price">€395</p>
+        </li>
+      </ul>
+    </div>
+    <button class="btn-catalog" type="button">Show more</button>
   </div>
 </section>
