--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -1,5 +1,7 @@
+/* #region */
 .catalog {
   padding-top: 60px;
+  justify-content: center;
 }
 
 .catalog-title {
@@ -30,6 +32,8 @@
   line-height: 1.25;
   letter-spacing: -0.02em;
   color: #0c0c0c;
+  padding-left: 24px;
+  margin-top: 10px;
 }
 .catalog-price {
   font-weight: 400;
@@ -37,12 +41,34 @@
   line-height: 1.28;
   letter-spacing: -0.02em;
   color: rgba(12, 12, 12, 0.5);
+  padding-left: 24px;
+  margin-top: 8px;
 }
 .picture-item {
   display: none;
 }
 .btn-catalog {
+  width: 160px;
+  height: 48px;
   border-radius: 16px;
-
   background-color: #3350e9;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.28;
+  color: #fbfbfb;
+  display: block;
+  margin: 30px auto;
+}
+
+/* #endregion */
+/* tablet */
+
+@media screen and (min-width: 768px) {
+  .picture-item {
+    display: block;
+  }
+
+  .catalog-list + .btn-catalog {
+    display: none;
+  }
 }
