--- a/src/css/sale.css
+++ b/src/css/sale.css
@@ -82,7 +82,7 @@
 .sale-card-subtitle {
     font-weight: 600;
     font-size: 24px;
-    line-height: 1.17;
+    line-height: 1.16667;
     letter-spacing: -0.02em;
     color: var(--background);
     margin-bottom: 10px;
@@ -91,7 +91,7 @@
 .sale-card-id {
     font-weight: 400;
     font-size: 14px;
-    line-height: 1.28;
+    line-height: 1.28571;
     letter-spacing: -0.02em;
     color: rgba(251, 251, 251, 0.5);
     margin-bottom: 20px;
@@ -116,10 +116,10 @@
 }
 
 .sale-card-old-price {
-    align-self: center;
+    padding-top: 8px;
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.17;
+    line-height: 1.16667;
     letter-spacing: -0.02em;
     text-decoration: line-through;
     color: rgba(251, 251, 251, 0.5);
@@ -129,7 +129,7 @@
 .sale-card-description {
     font-weight: 500;
     font-size: 14px;
-    line-height: 1.28;
+    line-height: 1.28571;
     letter-spacing: -0.02em;
     color: rgba(251, 251, 251, 0.7);
     margin-bottom: 28px;
@@ -142,6 +142,7 @@
 }
 
 .sale-card-item {
+    line-height: 1.1;
     font-weight: 500;
     font-size: 12px;
     color: var(--background);
