--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -1,7 +1,6 @@
 /* #region */
 .catalog {
   padding-top: 60px;
-  justify-content: center;
 }
 
 .catalog-title {
@@ -18,6 +17,15 @@
   justify-content: center;
   gap: 20px;
 }
+
+.catalog-list li {
+  text-align: center;
+}
+.catalog-list img {
+  display: inline-block;
+  margin-top: 34px;
+}
+
 .catalog-item {
   border: 1px solid rgba(12, 12, 12, 0.05);
   border-radius: 30px;
@@ -32,8 +40,12 @@
   line-height: 1.25;
   letter-spacing: -0.02em;
   color: #0c0c0c;
-  padding-left: 24px;
-  margin-top: 10px;
+  text-align: left;
+  padding-left: 28px;
+}
+
+.cat-text-tit {
+  display: none;
 }
 .catalog-price {
   font-weight: 400;
@@ -41,8 +53,9 @@
   line-height: 1.28;
   letter-spacing: -0.02em;
   color: rgba(12, 12, 12, 0.5);
-  padding-left: 24px;
+  padding-left: 28px;
   margin-top: 8px;
+  text-align: left;
 }
 .picture-item {
   display: none;
@@ -67,8 +80,41 @@
   .picture-item {
     display: block;
   }
+  .catalog-title {
+    margin-bottom: 40px;
+    font-size: 48px;
+  }
+  .catalog-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, auto);
+  }
+  .catalog-text {
+    font-size: 20px;
+    line-height: 1;
+    padding-left: 32px;
+  }
 
+  .catalog-item {
+    width: 344px;
+    height: 414px;
+  }
+  .catalog-price {
+    padding-left: 32px;
+  }
   .catalog-list + .btn-catalog {
     display: none;
+  }
+}
+
+/* desktop */
+@media screen and (min-width: 1280px) {
+  .catalog-item {
+    width: 368px;
+  }
+  .catalog-list {
+    row-gap: 32px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, auto);
   }
 }
