--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -29,10 +29,11 @@
           <img
             src="../img/catalog/catalogmob/cat-mob-min.png"
             alt="Garmin Fenix"
-            width="335"
+            width="280"
           />
         </picture>
         <h3 class="catalog-text">Garmin Fenix 7X Pro Sapphire Solar</h3>
+
         <p class="catalog-price">€500</p>
       </li>
       <li class="catalog-item">
@@ -61,7 +62,7 @@
           <img
             src="../img/catalog/catalogmob/cat-mob2-min.png"
             alt="Garmin Marq"
-            width="335"
+            width="280"
           />
         </picture>
 
@@ -94,7 +95,7 @@
           <img
             src="../img/catalog/catalogmob/cat-mob3-min.png"
             alt="Garmin Descent"
-            width="335"
+            width="280"
           />
         </picture>
 
@@ -127,7 +128,7 @@
           <img
             src="../img/catalog/catalogmob/cat-mob4-min.png"
             alt="Garmin D2"
-            width="335"
+            width="280"
           />
         </picture>
 
@@ -154,7 +155,7 @@
           <img
             src="../img/catalog/catalog.tab/cat-tab5-min.png"
             alt="Garmin Fenix"
-            width="335"
+            width="280"
           />
         </picture>
         <h3 class="catalog-text">Garmin Fenix 6 Pro Solar</h3>
@@ -180,14 +181,14 @@
           <img
             src="../img/catalog/catalog.tab/cat-tab6-min.png"
             alt="Tube Watch"
-            width="335"
+            width="280"
           />
         </picture>
-        <h3 class="catalog-text">Tube Watch S42 Date Steel With Black Case</h3>
+        <h3 class="catalog-text">Tube Watch S42 Date Steel With</h3>
         <p class="catalog-price">€395</p>
       </li>
     </ul>
 
-    <button class="btn-catalog" type="button">Show more</button>
+    <button class="btn-catalog" type="button">Show more</button>/
   </div>
 </section>
