edit section paddings

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -118,6 +118,11 @@
 
 /* Tablet */
 @media screen and (min-width: 768px) {
+.contact {
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
+
     .contact-title {
         font-size: 48px;
         line-height: 0.92;
@@ -172,6 +177,10 @@
 
 /* Desktop */
 @media screen and (min-width: 1280px) {
+    .contact {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
 
     .contact-form-container {
         width: 580px;
