make section hero

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -47,7 +47,7 @@
           </li>
         </ul>
 
-        <a href="#" class="hero-top-scroll">Scroll down</a>
+        <a href="#footer" class="hero-top-scroll">Scroll down</a>
       </div>
     </div>
 
@@ -81,6 +81,8 @@
           src="/img/hero/hero-bg-mob-min.png"
           alt="picture of watch"
           class="hero-bg-img"
+          width="1150px"
+          height="500px"
         />
       </picture>
     </div>
