--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,3 +1,5 @@
+/*made by Mykhailo pylypiv */
+
 .hero {
   padding-top: 60px;
 }
@@ -16,7 +18,6 @@
 }
 
 .hero-title .accent {
-  color: #3350e9;
   color: var(--accent);
 }
 
@@ -31,34 +32,15 @@
 
 .hero-top-side {
   width: 100%;
-  height: 44px;
   display: flex;
 }
 
 .hero-side-list {
-  position: relative;
+  display: flex;
 }
 
-.hero-top-scroll {
-  align-self: flex-end;
-  margin-left: auto;
-}
-
-.hero-side-item {
-  position: absolute;
-  display: block;
-  width: 44px;
-  height: 44px;
-  top: 0;
-  left: 0;
-}
-
-.hero-side-item:nth-child(2) {
-  left: 32px;
-}
-
-.hero-side-item:nth-child(3) {
-  left: 64px;
+.hero-side-item:not(:first-child) {
+  margin-left: -12px;
 }
 
 .hero-top-scroll {
@@ -70,4 +52,95 @@
 
   text-decoration: underline;
   text-underline-offset: 3px;
+
+  align-self: flex-end;
+  margin-left: auto;
+
+  transition: color 250ms ease-in-out;
 }
+
+.hero-top-scroll:hover {
+  color: var(--accent);
+}
+
+.hero-bg {
+  position: relative;
+  border-radius: 30px;
+  /* overflow: hidden; */
+}
+
+.hero-bg-img {
+  filter: brightness(80%);
+}
+
+/* #region TABLET*/
+
+@media screen and (min-width: 768px) {
+  .hero {
+    padding-top: 80px;
+  }
+
+  .hero-top {
+    margin-bottom: 40px;
+  }
+
+  .hero-top {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .hero-title {
+    max-width: 557px;
+    font-weight: 600;
+    font-size: 70px;
+    line-height: 0.85;
+  }
+
+  .hero-descr {
+    max-width: 480px;
+    font-size: 16px;
+    line-height: 1.25;
+    margin-bottom: 0;
+  }
+
+  .hero-top-side {
+    display: flex;
+    flex-direction: column;
+    width: 136px;
+    min-height: 100%;
+  }
+
+  .hero-side-avatar {
+    width: 56px;
+    height: 56px;
+  }
+
+  .hero-side-item:not(:first-child) {
+    margin-left: -15px;
+  }
+
+  .hero-top-scroll {
+    margin: 0;
+    margin-top: auto;
+    font-size: 20px;
+    line-height: 1;
+  }
+
+  .hero-bg {
+    border-radius: 50px;
+  }
+}
+
+/* #endregion TABLET*/
+
+/* #region DESK*/
+
+@media screen and (min-width: 1280px) {
+  .hero-title {
+    max-width: 597px;
+    font-size: 72px;
+    line-height: 0.87;
+  }
+}
+
+/* #endregion DESK*/
