--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -66,7 +66,20 @@
 .hero-bg {
   position: relative;
   border-radius: 30px;
-  /* overflow: hidden; */
+  overflow: hidden;
+}
+
+.hero-bg::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(
+    rgba(12, 12, 12, 0.2),
+    rgba(12, 12, 12, 0.2)
+  );
 }
 
 .hero-bg-img {
