--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -1,4 +1,3 @@
-/* #region */
 .catalog {
   padding-top: 60px;
 }
@@ -73,7 +72,6 @@
   margin: 30px auto;
 }
 
-/* #endregion */
 /* tablet */
 
 @media screen and (min-width: 768px) {
@@ -93,6 +91,10 @@
     font-size: 20px;
     line-height: 1;
     padding-left: 32px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-right: 32px;
   }
 
   .catalog-item {
