--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -184,7 +184,7 @@
             width="280"
           />
         </picture>
-        <h3 class="catalog-text">Tube Watch S42 Date Steel With</h3>
+        <h3 class="catalog-text">Tube Watch S42 Date Steel With Black Case</h3>
         <p class="catalog-price">€395</p>
       </li>
     </ul>
