--- a/src/css/header.css
+++ b/src/css/header.css
@@ -11,7 +11,6 @@
        justify-content: space-between;
    }
    .logo-link {
-       font-family: "Gilroy", sans-serif;
        font-weight: 500;
        font-size: 16px;
        letter-spacing: -0.02em;
@@ -20,7 +19,6 @@
        align-items: center;
        padding-top: 28px;
        padding-bottom: 28px;
-       padding-left: 20px;
    }
    
    
@@ -30,6 +28,10 @@
        padding-bottom: 34px;
        font-size: 20px;
        }
+       .burger-icon {
+        width: 40px;
+        height: 40px;
+    }
      }
      
      @media screen and (min-width:1280px) {
@@ -51,6 +53,7 @@
    .burger-icon {
        stroke-width: 2.50px;
        stroke: #0c0c0c;
+       width: 34px;
    }
    .header-nav-list {
        display: none;
@@ -62,7 +65,6 @@
        }
      }
    .header-nav-link {
-       font-family: "Gilroy", sans-serif;
        font-weight: 500;
        font-size: 14px;
        line-height: 1.28;
