--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
         >watchcharm
       </a>
       <button class="burger-btn js-mobile-menu" type="button">
-        <svg class="burger-icon" width="40" height="40">
+        <svg class="burger-icon" width="34" height="34">
           <use href="/img/sprite.svg#icon-burger"></use>
         </svg>
       </button>
@@ -26,7 +26,7 @@
             <a class="header-nav-link" href="#reviews">Reviews</a>
           </li>
           <li class="header-nav-list-item">
-            <a class="header-nav-link" href="#contact-us">Contact Us</a>
+            <a class="header-nav-link" href="#contact">Contact Us</a>
           </li>
       </ul>
     </nav>
