--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -32,9 +32,11 @@
             width="280"
           />
         </picture>
-        <h3 class="catalog-text">Garmin Fenix 7X Pro Sapphire Solar</h3>
+        <div class="cat-text-box">
+          <h3 class="catalog-text">Garmin Fenix 7X Pro Sapphire Solar</h3>
 
-        <p class="catalog-price">€500</p>
+          <p class="catalog-price">€500</p>
+        </div>
       </li>
       <li class="catalog-item">
         <picture>
