--- a/src/css/base.css
+++ b/src/css/base.css
@@ -30,6 +30,10 @@ body {
   font-family: 'Gilroy', sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
