--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -60,11 +60,11 @@
         <nav class="footer-nav">
           <ul class="footer-nav-list">
             <li class="footer-nav-item">
-              <a href="#hero" class="footer-nav-link">Home</a>
+              <a href="./index.html" class="footer-nav-link">Home</a>
             </li>
 
             <li class="footer-nav-item">
-              <a href="#about-us" class="footer-nav-link">About Us</a>
+              <a href="#about" class="footer-nav-link">About Us</a>
             </li>
 
             <li class="footer-nav-item">
@@ -80,7 +80,7 @@
             </li>
 
             <li class="footer-nav-item">
-              <a href="#contact-us" class="footer-nav-link">Contact Us</a>
+              <a href="#contact" class="footer-nav-link">Contact Us</a>
             </li>
           </ul>
         </nav>
@@ -96,15 +96,11 @@
 
         <ul class="copy-rules-list">
           <li class="copy-rules-list">
-            <a class="copy-rules-link" href="copyrigth-rules-link"
-              >Terms of Service</a
-            >
+            <a class="copy-rules-link" href="#">Terms of Service</a>
           </li>
 
           <li class="copy-rules-list">
-            <a class="copy-rules-link" href="copyrigth-rules-link"
-              >Privacy Policy</a
-            >
+            <a class="copy-rules-link" href="#">Privacy Policy</a>
           </li>
         </ul>
       </div>
