--- a/src/css/header.css
+++ b/src/css/header.css
@@ -9,7 +9,17 @@
        align-items: center;
        flex-grow: 1;
        justify-content: space-between;
+
    }
+   .header-nav::after {
+    display: block;
+    content: '';
+    position: absolute;
+    bottom: -24px;
+    width: 100%;
+    height: 1px;
+
+}
    .logo-link {
        font-weight: 500;
        font-size: 16px;
@@ -75,20 +85,26 @@
        display: inline;
        position: relative;
    }
-   .header-nav-home {
-     margin-bottom: 2px;
-   }
-   .header-nav-home::after {
-     position: absolute;
-     content: '';
-     bottom: 20px;
-     left: 50%;
-     transform: translateX(-50%);
-     width: 8px;
-     height: 8px;
-     background-color: #3350e9;
-     border-radius: 100%;
-   }
+   .header-nav-link::after {
+    content: '';
+    position: absolute;
+    bottom: -1px;
+    display: block;
+    top: 50px;
+    left: 50%;
+    margin-left: -4px;
+    width: 8px;
+    height: 8px;
+    border-radius: 4px;
+    background-color: currentColor;
+    opacity: 0;
+    color: var(--accent);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-nav-link:is(.current, :hover, :focus)::after {
+  opacity: 1;
+}
+
    .header-social-list {
        display: none;
    }
