--- a/src/css/header.css
+++ b/src/css/header.css
@@ -104,7 +104,9 @@
 .header-nav-link:is(.current, :hover, :focus)::after {
   opacity: 1;
 }
-
+.header-nav-link.header-nav-home::after {
+  opacity: 1;
+}
    .header-social-list {
        display: none;
    }
@@ -127,7 +129,6 @@
        border: 1px solid rgba(17, 17, 17, 0.1);
        border-radius: 10px;
        padding: 8px;
-       transition: color var(--animation), border var(--animation);
    }
    .header-social-img {
    fill: #0C0C0C;
