--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,8 @@
 /* #region header */
-
+.page-header {
+  border-bottom: 1px solid rgba(12, 12, 12, 0.1);
+  width: 100%;
+ }
 .page-header .container {
     display: flex;
     align-items: center;  
