--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
       <a class="logo-link" href="./index.html"
         >watchcharm
       </a>
-      <button class="burger-btn js-mobile-menu" type="button">
+      <button class="burger-btn js-mobile-menu" type="button" aria-label="button to open menu">
         <svg class="burger-icon" width="34" height="34">
           <use href="/img/sprite.svg#icon-burger"></use>
         </svg>
@@ -33,7 +33,7 @@
     <ul class="header-social-list">
       <li class="header-social-list-item">
         <a
-          class="header-social-link"
+          class="header-social-link" aria-label="a link to facebook"
           href="https://www.facebook.com/goITclub/"
           target="_blank"
         >
@@ -44,7 +44,7 @@
       </li>
       <li class="header-social-list-item">
         <a
-          class="header-social-link"
+          class="header-social-link" aria-label="a link to instagram"
           href="https://www.instagram.com/goitclub/"
           target="_blank"
         >
@@ -54,7 +54,8 @@
         </a>
       </li>
       <li class="header-social-list-item">
-        <a class="header-social-link" href="https://www.youtube.com/c/GoIT" target="_blank">
+        <a class="header-social-link" aria-label="a link to youtube"
+        href="https://www.youtube.com/c/GoIT" target="_blank">
           <svg class="header-social-img" width="20" height="20">
             <use href="/img/sprite.svg#icon-youtube"></use>
           </svg>
