--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,7 +1,7 @@
 <section class="mobile-menu-section">
   <div class="container">
     <div class="mobile-menu">
-      <button type="button" class="mobile-menu-close-btn js-mobile-menu">
+      <button type="button" class="mobile-menu-close-btn js-mobile-menu" aria-label="button to close menu">
         <svg class="mobile-menu-close-icon" width="34" height="34">
           <use href="/img/sprite.svg#icon-close"></use>
         </svg>
@@ -29,7 +29,7 @@
       <ul class="mobile-social-list">
         <li class="mobile-social-list-item">
           <a
-            class="mobile-social-link"
+            class="mobile-social-link" aria-label="a link to facebook"
             href="https://www.facebook.com/goITclub/"
             target="_blank"
           >
@@ -40,7 +40,7 @@
         </li>
         <li class="mobile-social-list-item">
           <a
-            class="mobile-social-link"
+            class="mobile-social-link" aria-label="a link to instagram"
             href="https://www.instagram.com/goitclub/"
             target="_blank"
           >
@@ -50,7 +50,8 @@
           </a>
         </li>
         <li class="mobile-social-list-item">
-          <a class="mobile-social-link" href="https://www.youtube.com/c/GoIT" target="_blank">
+          <a class="mobile-social-link" aria-label="a link to youtube" 
+          href="https://www.youtube.com/c/GoIT" target="_blank">
             <svg class="mobile-social-img" width="18" height="18">
               <use href="/img/sprite.svg#icon-youtube"></use>
             </svg>
