--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -70,7 +70,8 @@
   line-height: 1.28;
   color: #fbfbfb;
   display: block;
-  margin: 30px auto;
+  margin-left: 88px;
+  margin-top: 40px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn-catalog:focus {
@@ -82,6 +83,9 @@
 /* tablet */
 
 @media screen and (min-width: 768px) {
+  .catalog {
+    padding-top: 80px;
+  }
   .picture-item {
     display: block;
   }
@@ -119,6 +123,9 @@
 
 /* desktop */
 @media screen and (min-width: 1280px) {
+  .catalog {
+    padding-top: 100px;
+  }
   .catalog-list {
     row-gap: 32px;
     grid-template-columns: repeat(3, 1fr);
