--- a/src/css/header.css
+++ b/src/css/header.css
@@ -124,14 +124,19 @@
    .header-social-list-item {
        width: 36px;
        height: 36px;
-   }
-   .header-social-link {
-       display: block;
-       width: 100%;
-       height: 100%;
-       border: 1px solid rgba(17, 17, 17, 0.1);
+       border: 1px solid rgba(12,12,12,.1);
        border-radius: 10px;
-       padding: 8px;
+      padding: 8px;
+      transition: border-color 0.3s ease-in-out;
+   }
+   .header-social-list-item:hover, 
+   .header-social-list-item:focus {
+    border-color: color-mix(in srgb, #3350E9, white 80%);
+}
+   .header-social-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
    }
    .header-social-img {
    fill: #0C0C0C;
