--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -6,7 +6,6 @@
 .footer-container {
     background-color: var(--main);
     border-radius: 30px;
-    min-width: 280px;
     max-width: 335px;
     margin: 0 auto;
     padding: 40px 28px 28px;
@@ -248,6 +247,7 @@
         position: absolute;
         top: 0;
         right: 0;
+        margin: 0;
     }
 
     .footer-phone-num {
