--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,20 +1,20 @@
 <section class="about-us" id="about">
   <div class="container about-us-section-container">
     <div class="about-us-content">
-      <div class="about-us-text-content">
-        <h2 class="about-us-section-title">About Us</h2>
-        <p class="about-us-section-paragraph paragraph-1">
-          Welcome to our premium watch collection, where luxury and style meet
-          functionality and precision. Our selection of timepieces embodies the
-          very best in Swiss craftsmanship and engineering, ensuring that you'll
-          always have a reliable and stylish accessory on your wrist.
-        </p>
-        <p class="about-us-section-paragraph">
-          At our premium watch collection, we believe that a watch is more than
-          just a timekeeping device - it's a statement piece that reflects your
-          personality and style. So why settle for anything less than the best?
-        </p>
-      </div>
+      <!-- <div class="about-us-text-content"> -->
+      <h2 class="about-us-section-title">About Us</h2>
+      <p class="about-us-section-paragraph paragraph-1">
+        Welcome to our premium watch collection, where luxury and style meet
+        functionality and precision. Our selection of timepieces embodies the
+        very best in Swiss craftsmanship and engineering, ensuring that you'll
+        always have a reliable and stylish accessory on your wrist.
+      </p>
+      <p class="about-us-section-paragraph">
+        At our premium watch collection, we believe that a watch is more than
+        just a timekeeping device - it's a statement piece that reflects your
+        personality and style. So why settle for anything less than the best?
+      </p>
+      <!-- </div> -->
       <!-- <div class="about-us-btn"> -->
       <a class="view-catalog-link" href="#catalog">View catalog</a>
       <!-- </div> -->
