--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,17 +1,21 @@
 <header class="page-header">
   <div class="container">
     <nav class="header-nav">
-      <a class="logo-link" href="./index.html"
-        >watchcharm
-      </a>
-      <button class="burger-btn js-mobile-menu" type="button" aria-label="button to open menu">
+      <a class="logo-link" href="./index.html">watchcharm </a>
+      <button
+        class="burger-btn js-mobile-menu"
+        type="button"
+        aria-label="button to open menu"
+      >
         <svg class="burger-icon" width="34" height="34">
           <use href="/img/sprite.svg#icon-burger"></use>
         </svg>
       </button>
       <ul class="header-nav-list">
         <li class="header-nav-list-item">
-          <a class="header-nav-link header-nav-home" href="./index.html">Home</a>
+          <a class="header-nav-link header-nav-home" href="./index.html"
+            >Home</a
+          >
         </li>
         <li class="header-nav-list-item">
           <a class="header-nav-link" href="#about-us">About Us</a>
@@ -20,20 +24,21 @@
           <a class="header-nav-link" href="#catalog">Catalog</a>
         </li>
         <li class="header-nav-list-item">
-            <a class="header-nav-link" href="#sale">Sale</a>
-          </li>
-          <li class="header-nav-list-item">
-            <a class="header-nav-link" href="#reviews">Reviews</a>
-          </li>
-          <li class="header-nav-list-item">
-            <a class="header-nav-link" href="#contact">Contact Us</a>
-          </li>
+          <a class="header-nav-link" href="#sale">Sale</a>
+        </li>
+        <li class="header-nav-list-item">
+          <a class="header-nav-link" href="#reviews">Reviews</a>
+        </li>
+        <li class="header-nav-list-item">
+          <a class="header-nav-link" href="#contact">Contact Us</a>
+        </li>
       </ul>
     </nav>
     <ul class="header-social-list">
       <li class="header-social-list-item">
         <a
-          class="header-social-link" aria-label="a link to facebook"
+          class="header-social-link"
+          aria-label="a link to facebook"
           href="https://www.facebook.com/goITclub/"
           target="_blank"
         >
@@ -44,7 +49,8 @@
       </li>
       <li class="header-social-list-item">
         <a
-          class="header-social-link" aria-label="a link to instagram"
+          class="header-social-link"
+          aria-label="a link to instagram"
           href="https://www.instagram.com/goitclub/"
           target="_blank"
         >
@@ -54,8 +60,12 @@
         </a>
       </li>
       <li class="header-social-list-item">
-        <a class="header-social-link" aria-label="a link to youtube"
-        href="https://www.youtube.com/c/GoIT" target="_blank">
+        <a
+          class="header-social-link"
+          aria-label="a link to youtube"
+          href="https://www.youtube.com/c/GoIT"
+          target="_blank"
+        >
           <svg class="header-social-img" width="20" height="20">
             <use href="/img/sprite.svg#icon-youtube"></use>
           </svg>
@@ -63,5 +73,4 @@
       </li>
     </ul>
   </div>
-
 </header>
