updat html and css file

--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -135,7 +135,62 @@
         <h3 class="catalog-text">Garmin D2 Delta PX</h3>
         <p class="catalog-price">€380</p>
       </li>
-      <li class="catalog-item picture-item">
+
+      <li class="catalog-item">
+        <picture>
+          <source
+            media="(min-width: 1280px)"
+            srcset="
+              /img/catalog/catalog.desk/cat5desk-min.png    1x,
+              /img/catalog/catalog.desk/cat5desk@2x-min.png 2x
+            "
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              /img/catalog/catalog.tab/cat-tab3-min.png    1x,
+              /img/catalog/catalog.tab/cat-tab3@2x-min.png 2x
+            "
+          />
+
+          <img
+            src="/img/catalog/catalog.desk/cat5desk-min.png"
+            alt="Garmin Fenix"
+            width="292"
+          />
+        </picture>
+
+        <h3 class="catalog-text">Garmin Fenix 6 Pro Solar</h3>
+        <p class="catalog-price">€400</p>
+      </li>
+      <li class="catalog-item">
+        <picture>
+          <source
+            media="(min-width: 1280px)"
+            srcset="
+              /img/catalog/catalog.desk/cat6desk-min.png    1x,
+              /img/catalog/catalog.desk/cat6desk@2x-min.png 2x
+            "
+          />
+
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              /img/catalog/catalog.tab/cat-tab6-min.png    1x,
+              /img/catalog/catalog.tab/cat-tab6@2x-min.png 2x
+            "
+          />
+          <img
+            src="/img/catalog/catalog.desk/cat6desk-min.png"
+            alt="Garmin D2"
+            width="292"
+          />
+        </picture>
+
+        <h3 class="catalog-text">Tube Watch S42 Date Steel With Black Case</h3>
+        <p class="catalog-price">€395</p>
+      </li>
+      <!-- <li class="catalog-item picture-item">
         <picture>
           <source
             media="(min-width: 1280px)"
@@ -186,7 +241,7 @@
         </picture>
         <h3 class="catalog-text">Tube Watch S42 Date Steel With Black Case</h3>
         <p class="catalog-price">€395</p>
-      </li>
+      </li>-->
     </ul>
 
     <button aria-label="button to show more" class="btn-catalog" type="button">
