--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="page-header">
+<header class="page-header hidden">
   <div class="container">
     <nav class="header-nav">
       <a class="logo-link" href="./index.html">watchcharm </a>
