--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero hidden">
   <div class="container">
     <div class="hero-top">
       <div class="hero-top-wrapper">
