--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <!--- Footer by Taras Pererva --->
 
-<footer id="footer" class="footer hidden">
+<footer id="footer" class="footer">
   <div class="footer-container">
     <div class="footer-wrapper-one">
       <a
