--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,4 +1,4 @@
-<section class="contact hidden" id="contact">
+<section class="contact" id="contact">
   <div class="container">
     <h2 class="contact-title">Contact Us</h2>
     <div class="contact-section-container">
