--- a/src/partials/sale.html
+++ b/src/partials/sale.html
@@ -1,4 +1,4 @@
-<section class="sale hidden" id="sale">
+<section class="sale" id="sale">
   <div class="container">
     <h2 class="sale-title">Sale</h2>
 
