chenge _main.css

--- a/src/css/_main.css
+++ b/src/css/_main.css
@@ -11,13 +11,13 @@
 
 @import url('./about.css');
 
- @import url('./catalog.css'); 
+@import url('./catalog.css');
 
 /* @import url('./advertisement.css'); */
 
 @import url('./sale.css');
 
-/* @import url('./revievs.css'); */
+@import url('./revievs.css');
 
 @import url('./contact.css');
 
