improve files and add js file

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -2,7 +2,7 @@
   <div class="container about-us-section-container">
     <div class="about-us-content">
       <!-- <div class="about-us-text-content"> -->
-      <h2 class="about-us-section-title">About Us</h2>
+      <h2 class="about-us-section-title" tabindex="0">About Us</h2>
       <p class="about-us-section-paragraph paragraph-1">
         Welcome to our premium watch collection, where luxury and style meet
         functionality and precision. Our selection of timepieces embodies the
