--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -1,6 +1,6 @@
 <section class="catalog" id="catalog">
   <div class="container">
-    <h2 class="catalog-title">Catalog</h2>
+    <h2 class="catalog-title" tabindex="0">Catalog</h2>
 
     <ul class="catalog-list">
       <li class="catalog-item">
