--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,6 +1,6 @@
 <section class="contact" id="contact">
   <div class="container">
-    <h2 class="contact-title">Contact Us</h2>
+    <h2 class="contact-title" tabindex="0">Contact Us</h2>
     <div class="contact-section-container">
       <div class="contact-form-container">
         <p class="contact-form-container-text">
