--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -60,7 +60,7 @@
         </a>
       </address>
 
-      <h2 class="footer-description">
+      <h2 class="footer-description" tabindex="0">
         Have the time of your life with our watches: where high-class
         craftsmanship meets impeccable design
       </h2>
