--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,7 +18,7 @@
           >
         </li>
         <li class="header-nav-list-item">
-          <a class="header-nav-link" href="#about-us">About Us</a>
+          <a class="header-nav-link" href="#about">About Us</a>
         </li>
         <li class="header-nav-list-item">
           <a class="header-nav-link" href="#catalog">Catalog</a>
