--- a/src/partials/revievs.html
+++ b/src/partials/revievs.html
@@ -1,6 +1,6 @@
 <section class="section-reviews" id="reviews">
   <div class="container">
-    <h2 class="reviews-title">Reviews</h2>
+    <h2 class="reviews-title" tabindex="0">Reviews</h2>
     <ul class="reviews-list">
       <li class="reviews-item">
         <picture>
