--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="mobile-menu">
       <button type="button" class="mobile-menu-close-btn js-mobile-menu" aria-label="button to close menu">
-        <svg class="mobile-menu-close-icon" width="34" height="34">
+        <svg class="mobile-menu-close-icon" width="17" height="17">
           <use href="/img/sprite.svg#icon-close"></use>
         </svg>
       </button>
@@ -11,7 +11,7 @@
           <a class="mobile-menu-link home-active" href="./index.html">Home</a>
         </li>
         <li class="mobile-menu-list-item">
-          <a class="mobile-menu-link js-mobile-menu" href="#about-us">About Us</a>
+          <a class="mobile-menu-link js-mobile-menu" href="#about">About Us</a>
         </li>
         <li class="mobile-menu-list-item">
           <a class="mobile-menu-link js-mobile-menu" href="#catalog">Catalog</a>
